--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: youssef
 show_downloads: True
 remote_theme: pages-theme/minimal@v0.2.0
-plugin:
--
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
